# alang

./: .env.example  .gitignore  README.md  README_INSTALLATION.md  SECURITY.md  debug_config.py  download_and_install.bat  download_and_install.sh  install.py  install.sh  install_alang.ps1  install_cmd.bat  main.py  pyproject.toml  requirements.txt  run_alang.bat  run_alang.ps1  run_alang_with_key.bat  setup.py  simple_chat.py  test_simple.py
src/alang/: __init__.py  app.py  config.py  database.py  gemini_client.py  tools.py  widgets.py
